--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@ body{
 }
 
 
-/* -------------------------
-     header section -start 
-   ------------------------*/
    /*----------------------------
        navbar section start
    ----------------------------- */
@@ -95,8 +92,14 @@ body{
 .banner-img img{
   width: 556px;
   height: 438px;
-  margin-top: 10px;
+  margin-right: 50px;
+  margin-top: 30px;
   margin-left: 100px;
+  overflow: hidden;
+}
+.banner-img:hover img{
+    transform: scale(1.1);
+    transition: transform 2s ease-in-out;
 }
 /*------------------------
    banner title end 
@@ -324,3 +327,147 @@ hr{
 /*--------------------------- 
     footer section end 
 ---------------------------- */
+
+@media only screen and (max-width:688px) {
+
+    /*--------------------------- 
+       navbar section start 
+    -------------------------- */
+    .head-container{
+        width: 100%;
+    }
+    .nav-bar {
+        flex-direction: column;
+        text-align: center;
+        margin-right: 30px;
+    }
+    .nav-menu{
+        flex-direction: column;
+
+    }
+    .nav-menu li {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .nav-menu li a{
+        font-size: 10px;
+    }
+    .button{
+        padding: 5px 10px;
+        margin-left: 150px;
+    }
+    .button img{
+       width: 20px;
+    }
+    .button a{
+        font-size: 10px;
+    }
+    .button:hover{
+        background-image: linear-gradient(orange,tomato);
+    }  
+
+    /*----------------------------
+        navbar section start 
+    ----------------------------- */
+
+    /*------------------------- 
+       banner title start 
+    ------------------------ */
+    .banner-container{
+        flex-direction: column;
+        margin-right: 30px;
+    }
+    .head-title h1{
+        font-size: 25px;
+        text-align: center;
+    }
+    .icon-button{
+        text-align: center;
+    }
+    .icon-button a{
+        font-size: 10px;
+        padding: 5px 10px;
+    }
+
+    .banner-img img{
+        width: 250px;
+        height: 250px;
+    }
+    .banner-img:hover img{
+        transform: scale(1.1);
+        transition: transform 2s ease-in-out;
+    }
+
+    /*------------------------
+        banner title start  
+    ------------------------- */
+
+    /*------------------------
+        player section start
+    ------------------------- */
+    .players-section{
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        padding-left: 0;
+        margin-left: 0;
+    }
+    .player-detail{
+        margin-left: 10px;
+    }
+
+     /*------------------------
+        player section end
+    ------------------------- */
+
+
+     /*----------------------
+         club section start 
+     -------------------------- */
+    .container{
+        grid-template-columns: repeat(1,1fr);
+    }
+      /*----------------------
+         club section end
+     -------------------------- */
+
+     /* copa highlight start  */
+
+     .copa-highlight{
+         flex-direction: column;
+     }
+     .copa-highlight h1{
+         font-size: 20px;
+     }
+     .copa-highlight p{
+         font-size: 10px;
+     }
+     .highlight-image img{
+         width: 400px;
+     }
+      /* copa highlight end  */
+
+      .feedback-details{
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+      }
+      .award-background{
+          height: 100%;
+          background-color: black;
+      }
+     
+    .feedback h1{
+        font-size: 10px;
+    }
+
+    .finish-section img{
+        width: 50%;
+        margin-left: 90px;
+    }
+    .icon-serial{
+        margin-left: 140px;
+    }
+    .finish-section p{
+        margin-left: 20px;
+    }
+}
